# tonverk-elmulti-converter

./: .gitignore  CHANGELOG.md  LICENSE  README-GUI.md  README.md  README_ja.md  elmconv.py  elmconv_gui.py  pyproject.toml  requirements-gui.txt
.github/workflows/: build-gui.yml
docs/: ELMULTI_FORMAT_SPEC.md  EXS24_FORMAT_SPEC.md  FORMAT_MAPPING.md  GUI_IMPLEMENTATION_PLAN.md  GUI_SPEC.md
gui/: __init__.py  app.py  converter.py  strings.py
gui/components/: __init__.py  input_selector.py  log_view.py  options_panel.py  output_picker.py
tools/: README.md  analyze_loops.py  loop_calculator.py
